Fixed material side-menu closing when navigating in desktop mode

--- a/generators/app/templates/src/app/core/shell/__material._shell.component.html
+++ b/generators/app/templates/src/app/core/shell/__material._shell.component.html
@@ -39,11 +39,11 @@
       <nav>
         <mat-list>
           <mat-divider></mat-divider>
-          <a mat-list-item routerLink="/home" routerLinkActive="active" (click)="sidenav.close()">
+          <a mat-list-item routerLink="/home" routerLinkActive="active" (click)="isMobile && sidenav.close()">
             <span translate>Home</span>
           </a>
           <mat-divider></mat-divider>
-          <a mat-list-item routerLink="/about" routerLinkActive="active" (click)="sidenav.close()">
+          <a mat-list-item routerLink="/about" routerLinkActive="active" (click)="isMobile && sidenav.close()">
             <span translate>About</span>
           </a>
           <mat-divider></mat-divider>
