feat(): Add `Create account` and `Lost password?` pages for bootstrap

--- a/generators/app/templates/src/app/login/__auth+bootstrap.login.component.html
+++ b/generators/app/templates/src/app/login/__auth+bootstrap.login.component.html
@@ -55,6 +55,19 @@
               <span translate>Login</span>
             </button>
           </form>
+          <div class="row">
+            <button class="btn col-sm-6"
+                    routerLink="/sign-up">
+              <i class="fas fa-user-plus"></i>
+              <span translate>Create an account</span>
+            </button>
+
+            <button class="btn col-sm-6"
+                    routerLink="/lost-password">
+              <i class="fas fa-info-circle"></i>
+              <span translate>Lost password?</span>
+            </button>
+          </div>
         </div>
       </div>
     </div>
