--- a/generators/app/templates/src/app/login/lost-password/__auth+bootstrap.lost-password.component.scss
+++ b/generators/app/templates/src/app/login/lost-password/__auth+bootstrap.lost-password.component.scss
@@ -1,7 +1,7 @@
 @import "src/theme/theme-variables";
 @import "~bootstrap/scss/mixins/_breakpoints";
 
-.login-container {
+.lost-password-container {
   position: absolute;
   top: 0;
   bottom: 0;
@@ -9,7 +9,7 @@
   right: 0;
 }
 
-.login-box {
+.lost-password-box {
   display: flex;
   flex-direction: column;
   justify-content: center;
