--- a/generators/app/templates/src/app/login/lost-password/__auth+raw.lost-password.component.scss
+++ b/generators/app/templates/src/app/login/lost-password/__auth+raw.lost-password.component.scss
@@ -1,6 +1,6 @@
 @import "src/theme/theme-variables";
 
-.login-container {
+.lost-password-container {
   position: absolute;
   top: 0;
   bottom: 0;
@@ -9,8 +9,8 @@
   background: $container-color;
 }
 
-.login-container,
-.login-box,
+.lost-password-container,
+.lost-password-box,
 .form {
   display: flex;
   flex-direction: column;
@@ -18,7 +18,7 @@
   align-items: center;
 }
 
-.login-box {
+.lost-password-box {
   background: #fff;
   padding: 2em;
   border-radius: 0.5em;
