Add support for analytics with Angulartics2. Full support is limited to Google Analytics for now.

--- a/generators/app/templates/src/app/home/__bootstrap._home.component.html
+++ b/generators/app/templates/src/app/home/__bootstrap._home.component.html
@@ -6,5 +6,16 @@
     </h1>
     <app-loader [isLoading]="isLoading"></app-loader>
     <q [hidden]="isLoading">{{quote}}</q>
+<% if (props.angulartics) { -%>
+    <p>
+      <button
+        class="btn"
+        angulartics2On="click"
+        angularticsAction="Click button below quote"
+        [angularticsCategory]="quote">
+        Click me to send an Analytics event
+      </button>
+    </p>
+<% } -%>
   </div>
 </div>
