--- a/generators/app/templates/src/_index.html
+++ b/generators/app/templates/src/_index.html
@@ -22,6 +22,17 @@
 <% } -%>
 </head>
 <body>
+<% if (props.angulartics && props.analyticsProvider === 'ga') { -%>
+  <!-- Google Analytics -->
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    ga('create', '<%= props.googleAnalyticsAccount %>', 'auto');
+  </script>
+  <!-- End Google Analytics -->
+<% } -%>
 <% if (props.target.includes('web')) { -%>
   <!--[if lt IE 10]>
   <p>
