--- a/generators/app/templates/src/app/home/__ionic._home.component.html
+++ b/generators/app/templates/src/app/home/__ionic._home.component.html
@@ -17,6 +17,17 @@
         <app-loader [isLoading]="isLoading"></app-loader>
         <q [hidden]="isLoading">{{quote}}</q>
       </p>
+<% if (props.angulartics) { -%>
+      <p>
+        <button
+          ion-button
+          angulartics2On="click"
+          angularticsAction="Click button below quote"
+          [angularticsCategory]="quote">
+          Click me to send an Analytics event
+        </button>
+      </p>
+<% } -%>
     </ion-card-content>
   </ion-card>
 </ion-content>
