Added btn-primary on Bootstrap event tracking button.

--- a/generators/app/templates/src/app/home/__bootstrap._home.component.html
+++ b/generators/app/templates/src/app/home/__bootstrap._home.component.html
@@ -9,7 +9,7 @@
 <% if (props.angulartics) { -%>
     <p>
       <button
-        class="btn"
+        class="btn btn-primary"
         angulartics2On="click"
         angularticsAction="Click button below quote"
         [angularticsCategory]="quote">
