feat(): Add `Create account` and `Lost password?` pages for ionic

--- a/generators/app/templates/src/app/login/__auth+ionic.login.component.html
+++ b/generators/app/templates/src/app/login/__auth+ionic.login.component.html
@@ -48,6 +48,19 @@
               </button>
             </div>
           </form>
+          <div class="buttons-container">
+            <button ion-button
+                    outline
+                    routerLink="/sign-up">
+              <span translate>Create an account</span>
+            </button>
+
+            <button ion-button
+                    outline
+                    routerLink="/lost-password">
+              <span translate>Lost password?</span>
+            </button>
+          </div>
         </div>
       </ion-col>
     </ion-row>
