--- a/generators/app/templates/src/app/core/shell/_shell.component.scss
+++ b/generators/app/templates/src/app/core/shell/_shell.component.scss
@@ -1,4 +1,38 @@
 <% if (props.ui === 'ionic') { -%>
+<%   if (props.layout === 'tabs') { -%>
+$tabs-height: 8.2rem;
+
+.tabs::ng-deep {
+  .content {
+    .scroll-content,
+    .fixed-content {
+      height: 100%;
+    }
+  }
+
+  @media (min-width: 768px) {
+    .tabbar {
+      height: 100%;
+      width: $tabs-height;
+      flex-direction: column;
+      justify-content: flex-start;
+
+      .tab-button {
+        width: 100%;
+        height: $tabs-height;
+        flex: 0 1 auto;
+      }
+    }
+
+    .header,
+    .content {
+      left: $tabs-height;
+      right: 0;
+      width: calc(100% - #{$tabs-height});
+    }
+  }
+}  
+<%   } else if (props.layout === 'side-menu') { -%>
 @import "src/theme/theme-variables";
 
 [ion-fixed] {
@@ -25,6 +59,8 @@
   border-color: color-contrast($colors, primary);
   color: color-contrast($colors, primary);
 }
+  
+<%   } -%>
 <% } else if (props.ui === 'material') { -%>
 <%   if (props.layout === 'simple') { -%>
 @import "src/theme/theme-variables";
