--- a/generators/app/templates/src/app/_app.component.html
+++ b/generators/app/templates/src/app/_app.component.html
@@ -1,5 +1,5 @@
 <% if (props.ui === 'ionic') { -%>
-<ion-nav root=""></ion-nav>
+<ion-router-outlet></ion-router-outlet>
 <% } else { -%>
 <router-outlet></router-outlet>
 <% } -%>
