--- a/generators/app/templates/src/app/settings/__ionic-tabs._settings.component.html
+++ b/generators/app/templates/src/app/settings/__ionic-tabs._settings.component.html
@@ -14,10 +14,10 @@
   <ion-list-header>
     <ion-label translate>Account</ion-label>
   </ion-list-header>
-  <button ion-item>
+  <ion-item>
     <ion-icon name="contact" item-start></ion-icon>
     <ion-label translate>Profile</ion-label>
-  </button>
+  </ion-item>
   <ion-item (click)="logout()">
     <ion-icon name="md-log-out" item-start></ion-icon>
     <ion-label translate>Logout</ion-label>
@@ -26,10 +26,10 @@
   <ion-list-header>
     <ion-label translate>Preferences</ion-label>
   </ion-list-header>
-  <button *ngIf="isWeb" ion-item (click)="changeLanguage()">
+  <ion-item *ngIf="isWeb" (click)="changeLanguage()">
     <ion-icon name="md-globe" item-start></ion-icon>
     <ion-label translate>Change language</ion-label>
-  </button>
+  </ion-item>
   <ion-item>
     <ion-icon name="notifications" item-start></ion-icon>
     <ion-label translate>Notifications</ion-label>
