--- a/generators/app/templates/src/app/shell/__ionic-side-menu._shell.component.html
+++ b/generators/app/templates/src/app/shell/__ionic-side-menu._shell.component.html
@@ -4,9 +4,9 @@
     <ion-header>
       <ion-toolbar color="primary">
         <ion-buttons *ngIf="isWeb" end>
-          <button ion-button icon-only (click)="changeLanguage()">
+          <ion-button icon-only (click)="changeLanguage()">
             <ion-icon name="globe"></ion-icon>
-          </button>
+          </ion-button>
         </ion-buttons>
         <ion-title>{{'APP_NAME' | translate}}</ion-title>
       </ion-toolbar>
@@ -18,10 +18,10 @@
         <div class="profile" text-center padding>
           <ion-icon class="profile-icon" name="contact"></ion-icon>
           <div>
-            <button class="profile-button" ion-button color="light" (click)="showProfileActions()"
+            <ion-button class="profile-button" color="light" (click)="showProfileActions()"
                     round outline small icon-start>
               <ion-icon name="person"></ion-icon> {{username}}
-            </button>
+            </ion-button>
           </div>
         </div>
 <% } -%>
