Migrated all components and tests for tabs

--- a/generators/app/templates/src/_index.html
+++ b/generators/app/templates/src/_index.html
@@ -6,6 +6,7 @@
   <base href="/"/>
 <% if (props.target.includes('cordova')) { -%>
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
+  <meta name="format-detection" content="telephone=no">
   <meta name="msapplication-tap-highlight" content="no"/>
 <% } else { -%>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
@@ -15,6 +16,11 @@
 <% } -%>
 <% if (props.pwa) { -%>
   <link rel="manifest" href="manifest.json"/>
+
+  <!-- add to homescreen for ios -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+
 <% } -%>
 <% if (props.target.includes('web')) { -%>
   <link rel="icon" type="image/x-icon" href="favicon.ico"/>
@@ -74,10 +80,6 @@
     }
   </script>
 <% } -%>
-<% if (props.ui === 'ionic') { -%>
-  <ion-app></ion-app>
-<% } else { -%>
   <app-root></app-root>
-<% } -%>
 </body>
 </html>
