--- a/generators/app/templates/src/app/home/__ionic._home.component.html
+++ b/generators/app/templates/src/app/home/__ionic._home.component.html
@@ -1,10 +1,12 @@
 <ion-header>
-  <ion-navbar color="primary">
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
+  <ion-toolbar color="primary">
+    <ion-menu-toggle>
+      <ion-button>
+        <ion-icon name="menu"></ion-icon>
+      </ion-button>
+    </ion-menu-toggle>
     <ion-title><span translate>Home</span></ion-title>
-  </ion-navbar>
+  </ion-toolbar>
 </ion-header>
 <ion-content>
   <ion-card text-center>
