--- a/generators/app/templates/__cordova._config.xml
+++ b/generators/app/templates/__cordova._config.xml
@@ -117,6 +117,7 @@
 
 <% } -%>
   <!-- Common to all platforms -->
+  <preference name="ScrollEnabled" value="false"/>
   <preference name="Fullscreen" value="false"/>
   <preference name="DisallowOverscroll" value="true"/>
   <preference name="Orientation" value="portrait"/>
@@ -136,12 +137,12 @@
 
   <!-- Plugins -->
   <plugin name="cordova-custom-config" spec="^5.0.2"/>
-  <plugin name="cordova-plugin-device" spec="^2.0.1"/>
-  <plugin name="cordova-plugin-splashscreen" spec="^5.0.1"/>
+  <plugin name="cordova-plugin-device" spec="^2.0.2"/>
+  <plugin name="cordova-plugin-splashscreen" spec="^5.0.2"/>
   <plugin name="cordova-plugin-statusbar" spec="^2.4.1"/>
   <plugin name="cordova-plugin-whitelist" spec="^1.3.3"/>
-  <plugin name="ionic-plugin-keyboard" spec="^2.2.1"/>
+  <plugin name="cordova-plugin-ionic-keyboard" spec="^2.0.5" />
 <% if (props.mobile.includes('ios')) { -%>
-  <plugin name="cordova-plugin-ionic-webview" spec="^1.1.16"/>
+  <plugin name="cordova-plugin-ionic-webview" spec="^2.0.0"/>
 <% } -%>
 </widget>
