--- a/generators/app/templates/src/theme/__ionic.theme-variables.scss
+++ b/generators/app/templates/src/theme/__ionic.theme-variables.scss
@@ -5,16 +5,10 @@
 // Ionic Variables and Theming. For more info, please see: http://ionicframework.com/docs/v2/theming/
 
 // Font path is used to include ionicons, roboto, and noto sans fonts
-$font-path: "~ionic-angular/fonts";
-$ionicons-font-path: "~ionicons/dist/fonts";
 
 
 // The app direction is used to include rtl styles in your app. For more info, please see:
 // http://ionicframework.com/docs/theming/rtl-support/
-$app-direction: ltr;
-
-
-@import "~ionic-angular/themes/ionic.globals";
 
 
 // Shared Variables
@@ -32,35 +26,100 @@ $app-direction: ltr;
 // so you can add, rename and remove colors as needed.
 // The "primary" color is the only required color in the map.
 
-$colors: (
-  primary:    #488aff,
-  secondary:  #32db64,
-  danger:     #f53d3d,
-  light:      #f4f4f4,
-  dark:       #333
-);
+:root {
+  /** primary **/
+  --ion-color-primary: #488aff;
+  --ion-color-primary-rgb: 72,138,255;
+  --ion-color-primary-contrast: #fff;
+  --ion-color-primary-contrast-rgb: 255,255,255;
+  --ion-color-primary-shade: #3f79e0;
+  --ion-color-primary-tint: #5a96ff;
+
+  /** secondary **/
+  --ion-color-secondary: #32db64;
+  --ion-color-secondary-rgb: 50,219,100;
+  --ion-color-secondary-contrast: #fff;
+  --ion-color-secondary-contrast-rgb: 255,255,255;
+  --ion-color-secondary-shade: #2cc158;
+  --ion-color-secondary-tint: #47df74;
+
+  /** tertiary **/
+  --ion-color-tertiary: #f4a942;
+  --ion-color-tertiary-rgb: 244,169,66;
+  --ion-color-tertiary-contrast: #fff;
+  --ion-color-tertiary-contrast-rgb: 255,255,255;
+  --ion-color-tertiary-shade: #d7953a;
+  --ion-color-tertiary-tint: #f5b255;
+
+  /** success **/
+  --ion-color-success: #10dc60;
+  --ion-color-success-rgb: 16,220,96;
+  --ion-color-success-contrast: #fff;
+  --ion-color-success-contrast-rgb: 255,255,255;
+  --ion-color-success-shade: #0ec254;
+  --ion-color-success-tint: #28e070;
+
+  /** warning **/
+  --ion-color-warning: #ffce00;
+  --ion-color-warning-rgb: 255,206,0;
+  --ion-color-warning-contrast: #000;
+  --ion-color-warning-contrast-rgb: 0,0,0;
+  --ion-color-warning-shade: #e0b500;
+  --ion-color-warning-tint: #ffd31a;
+
+  /** danger **/
+  --ion-color-danger: #f53d3d;
+  --ion-color-danger-rgb: 245,61,61;
+  --ion-color-danger-contrast: #fff;
+  --ion-color-danger-contrast-rgb: 255,255,255;
+  --ion-color-danger-shade: #d83636;
+  --ion-color-danger-tint: #f65050;
+
+  /** light **/
+  --ion-color-light: #f4f4f4;
+  --ion-color-light-rgb: 244,244,244;
+  --ion-color-light-contrast: #000;
+  --ion-color-light-contrast-rgb: 0,0,0;
+  --ion-color-light-shade: #d7d7d7;
+  --ion-color-light-tint: #f5f5f5;
+
+  /** medium **/
+  --ion-color-medium: #989aa2;
+  --ion-color-medium-rgb: 152,154,162;
+  --ion-color-medium-contrast: #000;
+  --ion-color-medium-contrast-rgb: 0,0,0;
+  --ion-color-medium-shade: #86888f;
+  --ion-color-medium-tint: #a2a4ab;
+  
+  /** dark **/
+  --ion-color-dark: #222;
+  --ion-color-dark-rgb: 34,34,34;
+  --ion-color-dark-contrast: #fff;
+  --ion-color-dark-contrast-rgb: 255,255,255;
+  --ion-color-dark-shade: #1e1e1e;
+  --ion-color-dark-tint: #383838;
+
+  --ion-background-color: #fff;
+
+}
 
 
 // App iOS Variables
 // --------------------------------------------------
 // iOS only Sass variables can go here
 
-$cordova-ios-statusbar-padding:           20px;
-$text-input-ios-show-invalid-highlight:   true;
 
 
 // App Material Design Variables
 // --------------------------------------------------
 // Material Design only Sass variables can go here
 
-$text-input-md-show-valid-highlight:      false;
 
 
 // App Windows Variables
 // --------------------------------------------------
 // Windows only Sass variables can go here
 
-$text-input-wp-show-valid-highlight:      false;
 
 
 // App Theme
@@ -68,18 +127,14 @@ $text-input-wp-show-valid-highlight:      false;
 // Ionic apps can have different themes applied, which can then be future customized. This import comes last so that
 // the above variables are used and Ionic's default are overridden.
 
-@import "~ionic-angular/themes/ionic.theme.default";
 
 
 // Ionicons
 // --------------------------------------------------
 // The premium icon font for Ionic. For more info, please see: http://ionicframework.com/docs/v2/ionicons/
 
-@import "~ionicons/dist/scss/ionicons";
 
 
 // Fonts
 // --------------------------------------------------
 
-@import "~ionic-angular/fonts/roboto";
-@import "~ionic-angular/fonts/noto-sans";
