--- a/generators/app/templates/src/app/shell/_shell.component.scss
+++ b/generators/app/templates/src/app/shell/_shell.component.scss
@@ -51,12 +51,16 @@ $tabs-height: 8.2rem;
   // Use parent class from outside component context
   // See https://angular.io/guide/component-styles#host-context
   :host-context(.platform-ios) & {
-    padding-top: $cordova-ios-statusbar-padding;
   }
 }
 
 .profile-button {
   border-color: var(--ion-color-primary-contrast);
+  border-radius: 15px;
+  border-style: solid;
+  border-width: 1px;
+  padding: 5px;
+  background-color: transparent;
   color: var(--ion-color-primary-contrast);
 }
 <%   } -%>
