CLI --no-progress update and moved some misplaced generator lines

--- a/generators/app/templates/src/_index.html
+++ b/generators/app/templates/src/_index.html
@@ -6,7 +6,7 @@
   <base href="/"/>
 <% if (props.target.includes('cordova')) { -%>
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
-  <meta name="format-detection" content="telephone=no">
+  <meta name="format-detection" content="telephone=no"/>
   <meta name="msapplication-tap-highlight" content="no"/>
 <% } else { -%>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
