ionic, its deps, and fixes for beta5, lint shutups, and ion e2e fixes

--- a/generators/app/templates/src/_index.html
+++ b/generators/app/templates/src/_index.html
@@ -18,8 +18,8 @@
   <link rel="manifest" href="manifest.json"/>
 
   <!-- add to homescreen for ios -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-capable" content="yes"/>
+  <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
 
 <% } -%>
 <% if (props.target.includes('web')) { -%>
