Reverted line length changes and updated to ionic 4 beta 7

--- a/generators/app/templates/src/_main.scss
+++ b/generators/app/templates/src/_main.scss
@@ -14,10 +14,10 @@
 // @import "~ionic-angular/themes/ionic.components";
 
 /* stylelint-disable */
+@import "~@ionic/angular/css/core.css";
 @import "~@ionic/angular/css/normalize.css";
 @import "~@ionic/angular/css/structure.css";
 @import "~@ionic/angular/css/typography.css";
-@import "~@ionic/angular/css/colors.css";
 
 @import "~@ionic/angular/css/padding.css";
 @import "~@ionic/angular/css/float-elements.css";
