--- a/generators/app/templates/src/app/shell/__ionic-side-menu._shell.component.html
+++ b/generators/app/templates/src/app/shell/__ionic-side-menu._shell.component.html
@@ -29,12 +29,12 @@
 <% } -%>
         <ion-list>
           <ion-menu-toggle auto-hide="false">
-            <ion-item button menuClose [routerDirection]="'root'" routerLink="/home" routerLinkActive="active">
+            <ion-item [routerDirection]="'root'" routerLink="/home" routerLinkActive="active">
               <ion-label><span translate>Home</span></ion-label>
             </ion-item>
           </ion-menu-toggle>
           <ion-menu-toggle auto-hide="false">
-            <ion-item button menuClose [routerDirection]="'root'" routerLink="/about" routerLinkActive="active">
+            <ion-item [routerDirection]="'root'" routerLink="/about" routerLinkActive="active">
               <ion-label><span translate>About</span></ion-label>
             </ion-item>
           </ion-menu-toggle>
