--- a/generators/app/templates/src/theme/__ionic.theme-variables.scss
+++ b/generators/app/templates/src/theme/__ionic.theme-variables.scss
@@ -101,6 +101,31 @@
 
   /** background **/
   --ion-background-color: #fff;
+  --ion-background-color-rgb: 255, 255, 255;
+  --ion-background-color-step-50: #f2f2f2;
+  --ion-background-color-step-100: #e6e6e6;
+  --ion-background-color-step-150: #d9d9d9;
+  --ion-background-color-step-200: #ccc;
+  --ion-background-color-step-250: #bfbfbf;
+  --ion-background-color-step-300: #b3b3b3;
+  --ion-background-color-step-350: #a6a6a6;
+  --ion-background-color-step-400: #999;
+  --ion-background-color-step-450: #8c8c8c;
+  --ion-background-color-step-500: #808080;
+  --ion-background-color-step-550: #737373;
+  --ion-background-color-step-600: #666;
+  --ion-background-color-step-650: #595959;
+  --ion-background-color-step-700: #4d4d4d;
+  --ion-background-color-step-750: #404040;
+  --ion-background-color-step-800: #333;
+  --ion-background-color-step-850: #262626;
+  --ion-background-color-step-900: #191919;
+  --ion-background-color-step-950: #0d0d0d;
+  --ion-background-color-step-1000: #000;
+
+  /** content margin and padding **/
+  --ion-content-margin: 16px;
+  --ion-content-padding: 16px;
 }
 
 
