--- a/generators/app/templates/src/app/login/__auth+bootstrap.login.component.html
+++ b/generators/app/templates/src/app/login/__auth+bootstrap.login.component.html
@@ -3,16 +3,7 @@
     <h1 translate>APP_NAME</h1>
     <div>
       <h6 class="d-inline-block">v{{version}}</h6>
-      <div class="d-inline-block ml-3" ngbDropdown>
-        <button id="language-dropdown" class="btn btn-sm btn-secondary" ngbDropdownToggle>
-          {{currentLanguage}}
-        </button>
-        <div ngbDropdownMenu aria-labelledby="language-dropdown">
-          <button class="dropdown-item" *ngFor="let language of languages" (click)="setLanguage(language)">
-            {{language}}
-          </button>
-        </div>
-      </div>
+      <i18n-language-selector></i18n-language-selector>
     </div>
     <div class="container">
       <div class="card col-md-6 mt-3 mx-auto">
