revived hash strategy, nuked lodash, and a few markup coding style fixes

--- a/generators/app/templates/src/app/shell/__ionic-side-menu._shell.component.html
+++ b/generators/app/templates/src/app/shell/__ionic-side-menu._shell.component.html
@@ -5,8 +5,7 @@
       <ion-toolbar color="primary">
         <ion-buttons *ngIf="isWeb" end>
           <ion-button class="profile-button" color="light" (click)="showProfileActions()"
-            round fill="outline" size="small" slot="start"
-          >
+            round fill="outline" size="small" slot="start">
             <ion-icon name="globe"></ion-icon>
           </ion-button>
         </ion-buttons>
