--- a/generators/app/templates/src/app/shell/__ionic-tabs.shell.component.html
+++ b/generators/app/templates/src/app/shell/__ionic-tabs.shell.component.html
@@ -6,8 +6,7 @@
     [icon]="t.icon"
     show="true"
     [active]="tabIndex==selectedTabIndex"
-    [selected]="tabIndex==selectedTabIndex"
-  >
+    [selected]="tabIndex==selectedTabIndex">
   </ion-tab>
   <ion-router-outlet></ion-router-outlet>
 </ion-tabs>
