--- a/generators/app/templates/src/app/about/__ionic.about.component.html
+++ b/generators/app/templates/src/app/about/__ionic.about.component.html
@@ -1,10 +1,8 @@
 <ion-header>
   <ion-toolbar color="primary">
-    <ion-menu-toggle>
-      <ion-button>
-        <ion-icon name="menu"></ion-icon>
-      </ion-button>
-    </ion-menu-toggle>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
     <ion-title><span translate>About</span></ion-title>
   </ion-toolbar>
 </ion-header>
