--- a/generators/app/templates/src/_index.html
+++ b/generators/app/templates/src/_index.html
@@ -16,12 +16,12 @@
 <% if (props.pwa) { -%>
   <link rel="manifest" href="manifest.json"/>
 
-  <!-- add to homescreen for ios -->
-  <meta name="apple-mobile-web-app-capable" content="yes"/>
-  <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
-
 <% } -%>
 <% if (props.target.includes('web')) { -%>
+  <!-- add to homescreen for ios -->
+  <meta name="apple-mobile-web-app-capable" content="yes"/>
+  <meta name="apple-mobile-web-app-status-bar-style" content="default"/>
+
   <link rel="icon" type="image/x-icon" href="favicon.ico"/>
   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png"/>
 <% } -%>
