wiped old residue comments from scss - they'll probably come back later ;)

--- a/generators/app/templates/src/theme/__ionic.theme-variables.scss
+++ b/generators/app/templates/src/theme/__ionic.theme-variables.scss
@@ -2,21 +2,7 @@
  * Application global variables.
  */
 
-// Ionic Variables and Theming. For more info, please see: http://ionicframework.com/docs/v2/theming/
-
-// Font path is used to include ionicons, roboto, and noto sans fonts
-
-
-// The app direction is used to include rtl styles in your app. For more info, please see:
-// http://ionicframework.com/docs/theming/rtl-support/
-
-
-// Shared Variables
-// --------------------------------------------------
-// To customize the look and feel of this app, you can override the Sass variables found in Ionic's source scss files.
-// To view all the possible Ionic variables, see: http://ionicframework.com/docs/v2/theming/overriding-ionic-variables/
-
-
+// Ionic Variables and Theming. For more info, please see: https://beta.ionicframework.com/docs/theming/css-variables
 
 
 // Named Color Variables
@@ -127,34 +113,4 @@
   --ion-content-margin: 16px;
   --ion-content-padding: 16px;
 }
-
-
-// App iOS Variables
-// --------------------------------------------------
-// iOS only Sass variables can go here
-
-
-// App Material Design Variables
-// --------------------------------------------------
-// Material Design only Sass variables can go here
-
-
-// App Windows Variables
-// --------------------------------------------------
-// Windows only Sass variables can go here
-
-
-// App Theme
-// --------------------------------------------------
-// Ionic apps can have different themes applied, which can then be future customized. This import comes last so that
-// the above variables are used and Ionic's default are overridden.
-
-
-// Ionicons
-// --------------------------------------------------
-// The premium icon font for Ionic. For more info, please see: http://ionicframework.com/docs/v2/ionicons/
-
-
-// Fonts
-// --------------------------------------------------
 
