--- a/generators/app/templates/src/app/shell/__ionic-tabs.shell.component.html
+++ b/generators/app/templates/src/app/shell/__ionic-tabs.shell.component.html
@@ -1,12 +1,7 @@
 <ion-tabs #navTabs *ngIf="tabs" (ionChange)="onTabChange($event.detail.tab)" useRouter="false">
-  <ion-tab
-    *ngFor="let t of tabs; index as tabIndex"
-    [name]="t.name"
-    [label]="t.title | translate"
-    [icon]="t.icon"
-    show="true"
-    [active]="tabIndex==selectedTabIndex"
-    [selected]="tabIndex==selectedTabIndex">
+  <ion-tab *ngFor="let tab of tabs; index as tabIndex" [name]="tab.name" [label]="tab.title | translate"
+           [icon]="tab.icon" show="true" [active]="tabIndex === selectedTabIndex"
+           [selected]="tabIndex == selectedTabIndex">
   </ion-tab>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-router-outlet animated="false"></ion-router-outlet>
 </ion-tabs>
