--- a/generators/app/templates/src/app/shell/__ionic-tabs.shell.component.html
+++ b/generators/app/templates/src/app/shell/__ionic-tabs.shell.component.html
@@ -1,6 +1,7 @@
 <ion-router-outlet></ion-router-outlet>
 <ion-tab-bar slot="bottom" [selectedTab]="selectedTabName$ | async">
-  <ion-tab-button *ngFor="let t of tabs; index as tabIndex" show="true" [tab]="t.name" routerDirection="top" [routerLink]="'/' + t.route">
+  <ion-tab-button *ngFor="let t of tabs; index as tabIndex" show="true" [tab]="t.name" routerDirection="top"
+                  [routerLink]="'/' + t.route">
     <ion-icon [name]="t.icon"></ion-icon>
     <ion-label>{{ t.title | translate }}</ion-label>
   </ion-tab-button>
